[package]
name = "app"
version = "0.1.0"
authors = ["Max Block <maxblock@pm.me>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.15", features = ["serde"] }
serde = "1.0.116"
serde_json = "1.0.57"
mongodb = { version = "1.1.1", default-features = false, features = ["sync"] }
url = "2.1.1"